--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="utf-8">
     <title>Lab 01</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<div id="container">
 
+<div id="header">
+    <h1 class=".headerText">Webpage</h1>
+</div>
+<div id="nav">
+    <nav>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">FEATURED ART</a></li>
+            <li><a href="#">MEDIA GALLERY</a></li>
+            <li><a href="#">UPCOMING EVENTS</a></li>
+
+        </ul>
+    </nav>
+</div>
+
+    <div id="content">
+
+        <div id="coffeecup"></div>
+
+<div id="desc">
+<p>Located at 541 King Street, King Dusko is Charleston's premiere hangout locale with coffee
+    &amp; tea, a beer and wine bar (as well as outdoor biergarten) and
+    a local art gallery with various events hosted inside and out.
+    With weekly events like silent discos and singer songwriter nights, King Dusko is
+    the place to be for weekday and weekend night events in midtown. Come check us out soon!</p>
+
+</div>
+        <div id="info">
+           <div id="menu"></div>
+            <div id="address">
+                <p>541 KING ST. CHARLESTON, SC<br>(646) 705-6538| E: INFO@KINGDUSKO.COM <br>
+                M-TR: 11-11 | FR & SAT: 11- 2 | SUN: 11-11</p>
+            </div>
+
+        </div>
+    </div>
+
+</div>
 </body>
+
 
 </html>
