--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <div id="nav">
     <nav>
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">MENU</a></li>
-            <li><a href="#">FEATURED ART</a></li>
-            <li><a href="#">MEDIA GALLERY</a></li>
-            <li><a href="#">UPCOMING EVENTS</a></li>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>MENU</li>
+            <li>FEATURED ART</li>
+            <li>MEDIA GALLERY</li>
+            <li>UPCOMING EVENTS</li>
 
         </ul>
     </nav>
